# tic-tac-toe-py

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
accounts/: models.py  urls.py  views.py
config/: urls.py  views.py
config/settings/: base.py  prod.py
games/: admin.py  api_errors.py  models.py  serializers.py  services.py  urls.py  views.py
games/domain/: __init__.py  board.py  exceptions.py  marks.py  rules.py  status.py
games/management/commands/: play.py
games/migrations/: 0001_initial.py
games/tests/: test_api.py  test_board.py  test_cli.py  test_models.py
