[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tic-tac-toe-backend"
version = "0.1.0"
description = "REST backend for the Tic-Tac-Toe game"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Antonio Cifuentes" }]
license = { file = "LICENSE" }
dependencies = [
    "Django>=5.0,<5.2",
    "djangorestframework>=3.15",
    "drf-spectacular>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "games*", "accounts*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra --strict-markers"
testpaths = ["tests", "games", "accounts"]

[tool.coverage.run]
source = ["games", "accounts"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# RUF012 fights Django's ORM conventions (Meta.ordering, inlines, choices...).
ignore = ["E501", "RUF012"]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = "migrations"
